--- a/www/index.html
+++ b/www/index.html
@@ -29,20 +29,12 @@
     <script src="lib/collide/collide.js"></script>
     <script src="lib/lodash/lodash.js"></script>
     <script src="lib/restangular/src/restangular.js"></script>
+    <script src="lib/openfb/openfb.js"></script>
+    <script src="lib/openfb/ngopenfb.js"></script>
   </head>
   <body ng-app="hotlikeme">
-    <!--
-      The nav bar that will be updated as we navigate between views.
-    -->
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
-    </ion-nav-bar>
-    <!--
-      The views will be rendered in the <ion-nav-view> directive below
-      Templates are in the /templates folder (but you could also
-      have templates inline in this html file if you'd like).
-    -->
+    
     <ion-nav-view></ion-nav-view>
+
   </body>
 </html>
