--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
     <script src="lib/restangular/src/restangular.js"></script>
     <script src="lib/openfb/openfb.js"></script>
     <script src="lib/openfb/ngopenfb.js"></script>
+    <script src="lib/angular-cookies/angular-cookies.js"></script>
   </head>
   <body ng-app="hotlikeme">
     
