Wire up toplist view

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
     <script src="js/components/api/api.module.js"></script>
     <script src="js/components/api/api.users.service.js"></script>
     <script src="js/components/api/api.comparisons.service.js"></script>
+    <script src="js/components/api/api.couples.service.js"></script>
     <script src="lib/ionic-contrib-tinder-cards/ionic.tdcards.js"></script>
     <script src="lib/collide/collide.js"></script>
     <script src="lib/lodash/lodash.js"></script>
